samples/_failures_safe/1761084629_43a25a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aba6bd05.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_aba6bd05.c:162:13: error: expected expression at end of input
  162 |             case TOKEN_OPERATOR: type_str =
      |             ^~~~
./samples/SAFE/__tmp_aba6bd05.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aba6bd05.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aba6bd05.c:162:13: error: expected declaration or statement at end of input
